modified the way textAndImage is layed out slightly to avoid overlap when using long banner tex

--- a/_includes/assets/css/style.css
+++ b/_includes/assets/css/style.css
@@ -318,10 +318,11 @@ strong{
 	gap: 2rem;
 }
 .textAndImage__banner{
-	position: absolute;
-	left: calc( 60% - 6rem );
-	top: 2rem;
+	position: relative;
+	left: -10rem;
+	/* top: 2rem; */
 	padding: 1rem 2rem;
+	margin-bottom: 2rem;
 	max-width: calc( 40% + 6rem );
 	min-width: 30rem;
 	background-color: var(--color-foreground);
@@ -343,11 +344,11 @@ strong{
 	width: calc( 40% - 3rem );
 	min-width: 10rem;
 	margin: 0 auto 0 0;
-	padding: 7rem 2rem 2rem 2rem;
+	padding: 2rem 2rem 2rem 2rem;
 	background-color: var(--color-background);
 }
 .textAndImage__description h2{
-	margin: 1rem 0 3rem 0;
+	margin: 0rem 0 3rem 0;
 	margin-bottom: 6rem;
 	color: var(--color-text-em);
 	font: var(--main-h1-font);
